# TorchLeet

./: .gitignore  AGENTS.md  README.md  pyproject.toml
e1/: lin-regression.ipynb  lin-regression_SOLN.ipynb
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: server.ts
mcp-server/src/lib/: notebook-parser.ts  repo-root.ts
mcp-server/src/prompts/: explain.ts  interview-prep.ts  review.ts  tutor.ts
mcp-server/src/tools/: check-solution.ts  get-company-prep.ts  get-hint.ts  get-learning-path.ts  get-prerequisites.ts  get-question.ts  list-questions.ts
torch/hard/transformer/: transformer.ipynb  transformer_SOLN.ipynb
v3/alignment-training/dpo/: dpo.ipynb  dpo_SOLN.ipynb
v3/alignment-training/gradient-checkpointing/: gradient-checkpointing.ipynb  gradient-checkpointing_SOLN.ipynb
v3/alignment-training/grpo/: grpo.ipynb  grpo_SOLN.ipynb
v3/alignment-training/lora/: lora.ipynb  lora_SOLN.ipynb
v3/alignment-training/ppo-rlhf/: ppo-rlhf.ipynb  ppo-rlhf_SOLN.ipynb
v3/classical-ml/kmeans/: kmeans.ipynb  kmeans_SOLN.ipynb
v3/classical-ml/knn/: knn.ipynb  knn_SOLN.ipynb
v3/classical-ml/logistic-regression/: logistic-regression.ipynb  logistic-regression_SOLN.ipynb
v3/classical-ml/softmax/: softmax.ipynb  softmax_SOLN.ipynb
v3/gpu-systems/flash-attention-triton/: flash-attention-triton.ipynb  flash-attention-triton_SOLN.ipynb
v3/gpu-systems/fsdp/: fsdp.ipynb  fsdp_SOLN.ipynb
v3/gpu-systems/ring-attention/: ring-attention.ipynb  (+1 more)
website/: package-lock.json  package.json
website/scripts/: generate-ascii.mjs
(+74 files in other folders)
